# framework-comparison

./: docker-compose.yml  results.md  stress.js
go-chi/: go.mod  go.sum
go-chi/cmd/: main.go
go-chi/internal/crud/: db.go
go-chi/internal/handlers/: forms.go
go-chi/internal/models/: forms.go
go-chi/internal/utils/: env.go
python-django/: .gitignore  Pipfile  requirements.txt
python-django/core/: models.py  serializers.py  views.py
python-django/core/migrations/: 0001_initial.py
python-django/form_api/: asgi.py  settings.py  urls.py  wsgi.py
python-fastapi/: Pipfile  pyproject.toml
python-fastapi/forms_api/: crud.py  database.py  main.py  models.py  schemas.py
rust-actix-web/: Cargo.toml
rust-actix-web/migrations/: 20220510111257_forms.sql
rust-actix-web/src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs
