[package]
name = "forms-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
config = "0.13"
dotenvy = "0.15"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
derive_more = "0.99.17"
